<resources>
    <string name="app_name">Обо мне</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_frag">Import</string>

    <string name="main_fio">Шарыпов Павел</string>
    <string name="main_about">Я магистрант кафедры компьютерного проектирования и дизайна Университета ИТМО. Моя программа «Веб-технологии».</string>
    <string name="main_city">Санкт-Петербург</string>
    <string name="main_age">23 года</string>
    <string name="menu_appInfo">Приложение создано в рамках дисциплины \'Разработка Web-приложений для мобильных устройств\' \n\nУниверситет ИТМО, 2016 год</string>
    <string name="menu_vk">/pasharypov</string>
    <string name="menu_mail">pavloniym@gmail.com</string>
    <string name="menu_phone">+7 (981) 890-47-66</string>
    <string name="menu_about_me">Обо мне</string>
    <string name="menu_skills">Навыки</string>
    <string name="menu_education">Образование</string>
    <string name="menu_projects">Проекты</string>
    <string name="More">Подробнее</string>


    <string name="school_photo_title">МОУ СОШ №30\nСыктывкар\n2000–2011 гг.</string>
    <string name="education_title_school">Среднее образование</string>
    <string name="education_school">
        Сам я не местный. В 2000-ом году родители отдали меня в среднюю общее образовательную школу №30 в городе Сыктывкаре.
        Это в Республике Коми, в Северо-Западном Федеральном Округе. Но не думаю, что это кому-нибудь интересно.
        \nВ ней я проучился все 11 лет, до 2011 года.
        \n\nНе скажу, что учиться мне было сильно тяжело. Нет, напротив - мне это даже нравилось. Школу я закончил с серебрянной медалью, чему рад.
    </string>

    <string name="university_photo_title">НИУ ВШЭ СПб\nСанкт–Петербург\n2011–2015</string>
    <string name="education_bachelor_title">Бакалавриат</string>
    <string name="education_bachelor">После школы мне удалось поступить на бюджет в один из престижных экономических ВУЗов Санкт-Петербурга.
        \nУчеба была насыщенной и сложной. В этот период я познакомился с большим количеством талантливых и трудолюбивых людей. Во время обучения в НИУ ВШЭ я увлекся программированием и нашел единомышленников, с которым и по сей день продолжаю работать плечом к плечу.
        \nЗа 4 года обучения нашей командой программистов было реализовано несколько крупных и комплексных проектов. Эти проекты в основном решали бизнес-процессы нашего ВУЗа и пользовались популярностью среди преподавателей и студентов.
        \nУниверситет я закончил почти с красным дипломом, но увы, почти не считается =). Однако я очень рад всем успехам и неудачам, которые выпали на мою долю за время обучения в этом прекрасном месте.
    </string>

    <string name="master_photo_title">НИУ ИТМО\nСанкт–Петербург\n2015–2017</string>
    <string name="education_master_title">Магистратура</string>
    <string name="education_master">
        После бакалавриата я решил немного скорректировать направление своей профессиональной подготовки и продолжить обучение в другом, более профильном учебном заведении. Выбор пал на ИТМО, который специализируется на программировании и прочих IT технологиях.
        \nМне удалось поступить на направление Web-технологии, по конкурсу портфолио, без вступительных экзаменов. Что я могу сказать про этот университет - я разочарован. Знания, которые самостоятельно были получены мной во время учебы в Вышке, даже близко не стоят с теми навыками и умениями, которыми нас пытаются тут обучить.
        \nБезграмотность и некомпетентность большинства ППС и низкий уровень организации учебного процесса на кафедре не позволяют сказать, что этот ВУЗ способен выпустить грамотного web-специалиста.
        \nЯ закончу этот университет, но рекомендовать его никому не буду, увы.
    </string>


</resources>
