<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_main_drawer"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"
        android:background="#1a1a1a"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:id="@+id/menu_phone">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/menu_phone"
                    android:backgroundTint="#6a6969"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#6a6969"
                    android:textSize="12sp"
                    android:text="@string/menu_phone"/>
            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:id="@+id/menu_email">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/menu_mail"
                    android:backgroundTint="#6a6969"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#6a6969"
                    android:textSize="12sp"
                    android:text="@string/menu_mail"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:id="@+id/menu_vk">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/menu_vk"
                    android:backgroundTint="#6a6969"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#6a6969"
                    android:textSize="12sp"
                    android:text="@string/menu_vk"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textColor="#6a6969"
                android:textSize="12sp"
                android:text="@string/menu_appInfo"/>

        </LinearLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
